Fix spacing inconsistencies for project-renderer

--- a/packages/theme-compatibility/stylesheets/leven.scss
+++ b/packages/theme-compatibility/stylesheets/leven.scss
@@ -12,3 +12,11 @@
 	margin-bottom: 64px;
 	margin-top: 64px;
 }
+
+.crowdsignal-forms-form__content {
+	padding: 64px 0 32px;
+
+	& > *:not(.crowdsignal-forms-question-wrapper) {
+		margin-bottom: 32px;
+	}
+}
